<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    tools:context=".AddFood">


    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:onClick="imageButtonClicked"
        android:id="@+id/foodimagebutton"
        android:contentDescription="@string/todo" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_item_name"
        android:id="@+id/itemName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_item_description"
        android:id="@+id/itemDescription"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_item_price"
        android:id="@+id/itemPrice"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_item_to_menu"
        android:id="@+id/addItemButton"
        android:onClick="addItemButtonClicked"/>
</LinearLayout>