<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="10dp"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"

            >
            <ImageView
                android:id="@+id/foodimage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/food_presentation" android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/foodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="1dp"
                android:layout_toEndOf="@id/foodimage"
                android:text="@string/mashakura"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/foodDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/foodName"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/foodimage"
                android:text="@string/loved_kikuyu_dish"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/foodPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/foodDescription"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/foodimage"
                android:text="@string/_0_7"
                android:textColor="#4CAF50"
                android:textSize="20sp"
                android:textStyle="bold" />


        </RelativeLayout>



    </android.support.v7.widget.CardView>


</LinearLayout>